manifest/app-2048.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mon-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jeu-2048
  template:
    metadata:
      labels:
        app: jeu-2048
    spec:
      containers:
      - name: jeu-2048
        image: cocadmin/2048-mern
        imagePullPolicy: Always
        ports:
        - containerPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:4.4
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        hostPath:
          path: /data/mongo
          type: DirectoryOrCreate



---
apiVersion: v1
kind: Service
metadata:
  name: jeu-2048
spec:
  type: NodePort
  selector:
    app: jeu-2048
  ports:
  - port: 5000
    targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: ult2f67q8a.tail5d32f1.ts.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jeu-2048
            port:
              number: 5000
